--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: This is Just a TEST
+title: OpenWRT Builds for Linksys Devices
 
 # Your name to show in the footer
-author: Some Person
+author: Eliminater74
 
 # --- List of links in the navigation bar --- #
 
@@ -217,7 +217,7 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Toronto"
+timezone: "America/New_York"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
